ALTER TABLE "leads" ADD COLUMN "lost_reason" varchar(500);
